# TinkoffInvestBot

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md
database/: hevaadb.sql
docs/: _hevaa_application_8h_source.html  annotated.html  class_alpha-members.html  class_alpha.html  class_alpha__coll__graph.dot  class_custom_component-members.html  class_custom_component.html  class_custom_component__coll__graph.dot  class_custom_component__inherit__graph.dot  class_custom_service-members.html  class_custom_service.html  class_custom_service__coll__graph.dot  class_custom_service__inherit__graph.dot  class_data_base_manager-members.html  class_data_base_manager.html  class_data_base_manager__inherit__graph.dot  class_data_base_writer-members.html  class_data_base_writer.html  class_data_base_writer__inherit__graph.dot  class_hevaa_application-members.html  class_hevaa_application.html  class_hevaa_application__inherit__graph.dot  class_hevaa_test-members.html  class_hevaa_test.html  class_hevaa_test__inherit__graph.dot  class_instruments-members.html  class_instruments.html  class_instruments__inherit__graph.dot  class_invest_api_client-members.html  class_invest_api_client.html  class_invest_api_client__coll__graph.dot  class_long_polls_executer-members.html  class_long_polls_executer.html  class_long_polls_executer__coll__graph.dot  class_market_data-members.html  class_market_data.html  class_market_data__inherit__graph.dot  class_moving_average-members.html  class_moving_average.html  class_moving_average__coll__graph.dot  (+114 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+6 more)
src/: CMakeLists.txt  HevaaApplication.cpp
src/app/: CMakeLists.txt  HevaaApplication.cpp  HevaaApplication.h  LogConfigurator.cpp  LogConfigurator.h  generate-version-header.cmake  main.cpp  simpleQtLogger.cpp  simpleQtLogger.h
src/app/cmake/: git-version-generator.cmake  update-git-version.cmake
src/include/: CMakeLists.txt  imoduleplugin.h  moduleinterface.h  robotinterface.h  test-plugin-interface.h
src/lib/: CMakeLists.txt
src/lib/core/: CMakeLists.txt  HevaaStandardPaths.h  LinuxStandardPaths.h  WindowsStandardPaths.h  customcomponent.cpp  customcomponent.h  hevaa_common.h  hevaa_consts.h  hevaa_message.cpp  hevaa_message.h  hevaa_transport.h  hevaa_tree.cpp  hevaa_tree.h  hevaa_utils.h  hidestring.h  pluginsloader.cpp  pluginsloader.h
src/lib/stopper/: CMakeLists.txt  stopper.cpp  stopper.h
src/lib/stopper/tests/: CMakeLists.txt  test_hevaa.cpp
src/lib/worker/: CMakeLists.txt  worker.cpp  worker.h
src/lib/worker/tests/: CMakeLists.txt  test_hevaa.cpp
src/plugins/: CMakeLists.txt
src/plugins/blank/: blankPlugin.h
src/plugins/blankPlugin/: CMakeLists.txt  blankPlugin.cpp  blankPlugin.json
src/plugins/dataBase/: CMakeLists.txt  dataBasePlugin.cpp  dataBasePlugin.h  dataBasePlugin.json
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/MovingAverage/: CMakeLists.txt  movingAverageConsts.h  movingAveragePlugin.cpp  movingAveragePlugin.h  movingAveragePlugin.json
src/plugins/robots/SimpleRobot/: CMakeLists.txt  simpleRobotPlugin.cpp  simpleRobotPlugin.h  simpleRobotPlugin.json
src/plugins/robots/SimpleRobot2/: CMakeLists.txt  simpleRobot2Plugin.cpp  simpleRobot2Plugin.h  simpleRobot2Plugin.json
src/plugins/telegramBot/: CMakeLists.txt  telegramBotConsts.h  telegramBotPlugin.cpp  telegramBotPlugin.h  telegramPlugin.json
src/plugins/tinkoffInvest/: CMakeLists.txt  tinkoffInvestConsts.h  tinkoffInvestPlugin.cpp  tinkoffInvestPlugin.h
src/plugins/tinkoffInvest/Robots/: CMakeLists.txt
src/plugins/tinkoffInvest/Robots/MovingAverage/: movingAveragePlugin.cpp
